--- a/assets/css/styleDemo.css
+++ b/assets/css/styleDemo.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: beige;
 }
@@ -38,3 +44,13 @@ input{
     text-size-adjust: 100px;
     ;
 }
+.card {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 10px;
+    flex: 0 0 300px;;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    margin: 20px;
+  }
+
