--- a/style.css
+++ b/style.css
@@ -1,26 +1,67 @@
-body{
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-  background-color: #8fbbaf;
+body {
+  background-color: beige;
 }
-input{
-    width:20%;
-    height: 20px;
-    padding: 12px 20px;
-    border-radius: 4px;
-  /*  box-sizing: border-box;*/
-    border: 3px solid rgb(151, 148, 148);
-}
+
 #submit{
-    border: 3px solid rgb(167, 163, 163);
-    border-radius: 4px;
-    background-color: #525852;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-     margin: 10px 10px;
-    cursor: pointer;
+  border: 3px solid rgb(167, 163, 163);
+  border-radius: 4px;
+  background-color: #525852;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+   margin: 10px 10px;
+  cursor: pointer;
 }
-.center-align{
- text-align: center;
+
+
+.content {
+  background-color: rgb(231, 225, 214);
+  height: 300px;
+  width: 700px;
+  padding: 20px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+input{
+  width:20%;
+  height: 20px;
+  padding: 12px 10px;
+  border-radius: 4px;
+  color: #89888c;
+  border: 3px solid rgb(104, 72, 72);
+}
+
+.nav-wrapper {
+  background-color: rgb(90, 102, 70);
+  text-size-adjust: 100px;
+  ;
+}
+
+#info {
+  color: white;
+  background-color: rgb(90, 102, 70);
+}
+/* #card1 {
+  color: white;
+  background-color: rgb(90, 102, 70);
+} 
+#card2 {
+  color: white;
+  background-color: rgb(90, 102, 70);
+}  */
+
+#errors {
+  color: white;
+  background-color: rgb(90, 102, 70);
+}
+#vehicle_image{
+  margin-top: 10px;
 }
