--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ input{
 
 #img_background{
     background-color:beige ;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     height: 300px;
     max-width: 100%;
 }
