--- a/style.css
+++ b/style.css
@@ -61,7 +61,12 @@ input{
 #errors {
   color: white;
   background-color: rgb(90, 102, 70);
+  /* width:30%; */
 }
-#vehicle_image{
-  margin-top: 10px;
+
+#img_background{
+  background-color:beige ;
+  margin-top: 30px;
+  height: 300px;
+  max-width: 100%;
 }
